# LASSE-FOODS

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
src/: database.py
